2004-09-27  Mark Salter  <msalter@redhat.com>

	* src/ixp425_pci.c (pci_config): Fix offset handling.

2004-09-02  Mark Salter  <msalter@redhat.com>

	* include/var_io.h: Add externs for hal_flash_{read,program}.
	* include/hal_ixp425.h: Add more register related defines.
	* cdl/hal_arm_xscale_ixp425.cdl: Add little-endian support.
	* src/ixp425_pci.c: Ditto.
	* src/ixp425_redboot.c: New file.

2003-12-05  David Vrabel  <dvrabel@arcom.com>

	* include/hal_diag.h: hal_delay_us() is a C function.

2003-07-18  Nick Garnett  <nickg@balti.calivar.com>

	* cdl/hal_arm_xscale_ixp425.cdl:
        Changed values for CYGNUM_HAL_RTC_NUMERATOR,
        CYGNUM_HAL_RTC_DENOMINATOR and CYGNUM_HAL_RTC_PERIOD to
        "default_value" from "calculated". This makes it easier
        to change these values globally.
        
2003-04-08  Mark Salter  <msalter@redhat.com>

	* include/hal_var_ints.h (CYGHWR_HAL_GDB_PORT_VECTORS_MATCH): Define.

	* src/ixp425_misc.c (hal_interrupt_mask): Mask QM1 interrupt if all
	NPE interrupts are masked.
	(hal_interrupt_unmask): Unmask QM1 if any NPE interrupts unmasked.

	* include/hal_ixp425.h (IXP425_INTR_FIQ_ENC_ST): Fix offset.
 
2003-04-06  Mark Salter  <msalter@redhat.com>

	* src/ixp425_pci.c (cyg_hal_plf_pci_init): Support non-host mode.

2003-02-22  Mark Salter  <msalter@redhat.com>

	* src/ixp425_pci.c (cyg_hal_plf_pci_init): Don't reinit PCI
	controller on warm reset.
	* cdl/hal_arm_xscale_ixp425.cdl: Fix requirement for linux exec
	address.

2003-02-13  Mark Salter  <msalter@redhat.com>

	* include/var_io.h (CYGARC_UNCACHED_ADDRESS): Move uncached area.

2003-02-07  Mark Salter  <msalter@redhat.com>

	* src/ixp425_diag.c: Support platform config of ports used.
	* src/ixp425_misc.c: Ditto.
	* src/ixp425_pci.c: Ditto.
	
	* include/var_io.h: Fix compile errors when building without PCI.

2002-12-19  Mark Salter  <msalter@redhat.com>

	* include/hal_ixp425.h (EXP_BYTE_RD16): New definition.

2002-12-18  Mark Salter  <msalter@redhat.com>
